variables.Variables.scala.error
Erreur de compilation :
Variables:4: error: not found: value SurBiscuit
while (!SurBiscuit()) {
        ^Variables:9: error: not found: value Dejafait
while (Dejafait!=nbPas) {
       ^