variables.Variables.scala.code
var nbPas=0;
var DejaFait=0;

while (!SurBiscuit()) {
  avance();
  nbPas=nbPas+1;
}
prendBiscuit();
while (Dejafait!=nbPas) {
  recule();
  DejaFait=DejaFait+1;
}
poseBiscuit();